--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <h2>Hey there :)</h2>
                 <div class="header-container">
                     <div class="header-left">
-                        <h1>Narendra Khatpe</h1>
+                        <h1>Who I am</h1>
                         <p>DevOps Engineer | Cloud Enthusiast | Software Developer</p>
                     </div>
                     <div class="header-right">
