--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         </div>
                     </div>
                 </div>
-                <p>Welcome! I'm Narendra, currently pursuing my master’s degree at Binghamton University. With a solid foundation in DevOps and hands-on experience at Tata Consultancy Services, I specialize in optimizing CI/CD pipelines, managing cloud environments, and developing robust software solutions. My expertise spans a wide range of tools and technologies, including AWS, Azure, ServiceNow, and Python.</p>
+                <p>Welcome! I'm Narendra, currently pursuing my master’s degree in computer science at Binghamton University. With a solid foundation in DevOps and hands-on experience at Tata Consultancy Services, I specialize in optimizing CI/CD pipelines, managing cloud environments, and developing robust software solutions. My expertise spans a wide range of tools and technologies, including AWS, Azure, ServiceNow, and Python.</p>
                 <p>I thrive on tackling complex challenges and driving innovation in every project I undertake. Outside of my professional endeavors, I am dedicated to continuous learning and actively contribute to the tech community through various initiatives.</p>
                 <p>Thank you for visiting my portfolio! I’m eager to connect and explore opportunities to collaborate on projects that push the boundaries of technology. Let’s work together to create impactful solutions and drive meaningful change.</p>
             </div>
