--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 <h2>Hey there :)</h2>
                 <div class="header-container">
                     <div class="header-left">
-                        <h1>Who I am</h1>
-                        <p>DevOps Engineer | Cloud Enthusiast | Software Developer</p>
+                        <h1>Narendra Khatpe</h1>
+                        <p>DevOps Engineer | Cloud Engineer | Software Developer</p>
                     </div>
                     <div class="header-right">
                         <div class="social-links">
@@ -36,9 +36,9 @@
                         </div>
                     </div>
                 </div>
-                <p>Welcome! I'm Narendra, currently pursuing my master’s degree in computer science at Binghamton University. With a solid foundation in DevOps and hands-on experience at Tata Consultancy Services, I specialize in optimizing CI/CD pipelines, managing cloud environments, and developing robust software solutions. My expertise spans a wide range of tools and technologies, including AWS, Azure, ServiceNow, and Python.</p>
-                <p>I thrive on tackling complex challenges and driving innovation in every project I undertake. Outside of my professional endeavors, I am dedicated to continuous learning and actively contribute to the tech community through various initiatives.</p>
-                <p>Thank you for visiting my portfolio! I’m eager to connect and explore opportunities to collaborate on projects that push the boundaries of technology. Let’s work together to create impactful solutions and drive meaningful change.</p>
+                <p>Welcome! I'm Narendra, a passionate DevOps Engineer with a solid foundation in computer science. Currently pursuing my Master's degree from Binghamton University with an expected graduation in May 2025. My professional experience at Tata Consultancy Services has equipped me with expertise in optimizing CI/CD pipelines, cloud infrastructure management, and developing robust software solutions.</p>
+                <p>I specialize in a wide range of tools and technologies including AWS, Azure, Jenkins, Docker, Kubernetes, and various programming languages like Python, Java, and more. My bilingual capabilities in English and Japanese have enabled me to work effectively in global teams.</p>
+                <p>I thrive on tackling complex challenges and driving innovation in every project I undertake. My goal is to leverage my technical expertise and problem-solving abilities to create efficient, scalable solutions that make a meaningful impact.</p>
             </div>
         </section>
 
@@ -47,13 +47,15 @@
                 <h2>Education</h2>
                 <div class="education-item">
                     <h3>Binghamton University, State University of New York</h3>
-                    <p>Master of Science in Computer Science</p>
+                    <p><strong>Master of Science in Computer Science</strong> | GPA: 3.48</p>
                     <p>Expected Graduation: May 2025</p>
+                    <p><strong>Coursework:</strong> Design Patterns, Algorithms, Web Programming, Social Media Data Science Pipeline</p>
                 </div>
                 <div class="education-item">
                     <h3>Savitribai Phule Pune University, Pune, India</h3>
-                    <p>Bachelor of Engineering in Computer Engineering</p>
+                    <p><strong>Bachelor of Engineering in Computer Engineering</strong> | GPA: 3.56</p>
                     <p>Graduation: April 2020</p>
+                    <p><strong>Coursework:</strong> High Performance Computing, Algorithms, Cloud Computing, Machine Learning</p>
                 </div>
             </div>
         </section>
@@ -62,36 +64,55 @@
             <div class="container">
                 <h2>Technical Skills</h2>
                 <ul>
-                    <li><i class="fas fa-code"></i> <strong>Languages:</strong> C, C++, Java, Python, R, Bash, HTML, CSS, XML, SQL</li>
-                    <li><i class="fas fa-cogs"></i> <strong>Software & Frameworks:</strong> Agile, Waterfall, DevOps, OOPs, JDBC</li>
-                    <li><i class="fas fa-tools"></i> <strong>Tools & OS:</strong> Jenkins, Docker, Datadog, JP1, CyberArk, Terraform, ServiceNow, SonarQube, Kubernetes, XLR, XLD, JIRA, Bitbucket, Eclipse IDE, Visual Studio Code, Git, Windows, Linux/Unix</li>
-                    <li><i class="fas fa-cloud"></i> <strong>Cloud Platforms:</strong> Amazon Web Services, Microsoft Azure</li>
+                    <li><i class="fas fa-code"></i> <strong>Languages:</strong> Python, Bash/Shell Script, Java, C, C++, SQL, JavaScript, TypeScript, HTML, CSS</li>
+                    <li><i class="fas fa-cogs"></i> <strong>Frameworks:</strong> Agile, CI/CD, Git, Django, Docker, Kubernetes, Flask, React, RESTful APIs, OOP</li>
+                    <li><i class="fas fa-database"></i> <strong>Cloud & Databases:</strong> AWS (EC2, S3, Lambda), Azure, Google Cloud, MySQL, PostgreSQL, MongoDB, Oracle</li>
+                    <li><i class="fas fa-tools"></i> <strong>Tools:</strong> Jenkins, Terraform, ServiceNow, Zabbix, Ansible, Nginx, Vagrant, Prometheus, Grafana, JIRA</li>
+                    <li><i class="fas fa-globe"></i> <strong>Additional:</strong> Japanese (intermediate)</li>
                 </ul>
             </div>
         </section>
         
-
         <section id="projects">
             <div class="container">
                 <h2>Project Experience</h2>
                 <div class="project-item">
-                    <h3>Image Editor Application | Academic Project</h3>
-                    <p><strong>Duration:</strong> January 2023 – May 2023</p>
+                    <h3>CourseMatch: Course Assignment Optimization System</h3>
+                    <p><strong>Duration:</strong> June 2024 – Present</p>
+                    <p><strong>Technologies:</strong> Python, ILP, Pandas, Machine Learning Algorithms</p>
                     <ul>
-                        <li>Developed a user-friendly image editor with Python's Tkinter ttk module.</li>
-                        <li>Implemented core image processing functions (crop, filter, blur, adjust levels, rotate, flip) using OpenCV.</li>
-                        <li>Utilized event-driven programming for interactive features like cropping, drawing, and color selection.</li>
-                        <li>Applied real-time image manipulation tasks with efficient OpenCV algorithms (Gaussian blur, Canny edge detection, thresholding, morphological operations).</li>
+                        <li>Collaborating with Graduate Director Prof. Lander and Prof. Sikdar to solve an integer linear programming problem for optimizing course assignments for 1,000+ students for the Watson College's School of Computing</li>
+                        <li>Encoding hard and soft constraints to balance student preferences and department capacities</li>
+                        <li>Integrating machine learning algorithms to predict course demand and improve how students are matched to their preferred courses</li>
                     </ul>
                 </div>
                 <div class="project-item">
-                    <h3>College Recommendation Systems for Students | Academic Project</h3>
-                    <p><strong>Duration:</strong> June 2019 – March 2020</p>
+                    <h3>Meme Trend Analysis System</h3>
+                    <p><strong>Duration:</strong> August 2024 – December 2024</p>
+                    <p><strong>Technologies:</strong> Python, MongoDB, Flask, NLP</p>
                     <ul>
-                        <li>Created a dynamic web application using Java Server Pages (JSP) and MySQL.</li>
-                        <li>Developed a hybrid recommendation system combining Collaborative Filtering and Content-Based Filtering.</li>
-                        <li>Built a data retrieval and presentation layer for detailed college information access.</li>
-                        <li>Published research paper in the International Journal of Innovative Research in Science, Engineering, and Technology (IJIRSET), Tamil Nadu, India.</li>
+                        <li>Built a scalable system to analyze 1M+ memes from Reddit and 4chan by extracting metadata and user comments, enabling trend analysis before and after a major political election event</li>
+                        <li>Implemented a sentiment analysis pipeline with 95% accuracy to process 4,000+ daily comments</li>
+                        <li>Developed a dashboard to visualize meme propagation and emerging trends across online communities</li>
+                    </ul>
+                </div>
+                <div class="project-item">
+                    <h3>Advanced Image Editor</h3>
+                    <p><strong>Duration:</strong> March 2024 – May 2024</p>
+                    <p><strong>Technologies:</strong> Python, Tkinter, OpenCV</p>
+                    <ul>
+                        <li>Developed a desktop image editor with 15+ filters and transformations using OpenCV and a custom Tkinter interface</li>
+                        <li>Redesigned and optimized image processing algorithms to handle high-resolution images more efficiently</li>
+                        <li>Achieved over 40% faster processing times compared to standard OpenCV library functions</li>
+                    </ul>
+                </div>
+                <div class="project-item">
+                    <h3>AI College Recommendation System</h3>
+                    <p><strong>Duration:</strong> June 2019 – March 2020</p>
+                    <p><strong>Technologies:</strong> Java, JSP, MySQL, Machine Learning Algorithms</p>
+                    <ul>
+                        <li>Built a college recommendation platform using collaborative and content-based filtering with 87% accuracy</li>
+                        <li>Developed backend using JSP and MySQL, and published findings in IJIRSET journal as part of academic research</li>
                     </ul>
                 </div>
             </div>
@@ -104,22 +125,20 @@
                     <h3>DevOps Engineer | Tata Consultancy Services, Pune, India</h3>
                     <p><strong>Duration:</strong> July 2022 – June 2023</p>
                     <ul>
-                        <li>Utilized BitBucket, XebiaLabs Release (XLR), and Jenkins to optimize Continuous Integration and Continuous Deployment (CI/CD) pipelines, reducing manual deployments by 50%.</li>
-                        <li>Monitored and analyzed application performance using Datadog, ensuring consistent system health and performance metrics.</li>
-                        <li>Orchestrated Kubernetes cluster deployment and management for seamless microservices scalability.</li>
-                        <li>Ensured compliance with industry standards and best practices for security, performance, and scalability through rigorous testing and deployment processes.</li>
+                        <li>Designed and maintained robust CI/CD pipelines using Jenkins and XebiaLabs Release, ensuring deployment of over 20 microservices that powered core banking operations for a major financial institution</li>
+                        <li>Developed Bash and Python scripts to automate build, test, and deployment workflows, improving release reliability and eliminated manual intervention across the CI/CD pipelines</li>
+                        <li>Managed observability tools like Azure Monitor and Zabbix; created runbooks and technical documentation to support incident response, system recovery, and team-wide operational readiness</li>
+                        <li>Improved release frequency by 30% and reduced post-deployment incidents by 25% through integrated automation, testing coverage, and standardized deployment pipelines</li>
                     </ul>
                 </div>
                 <div class="experience-item">
                     <h3>Systems Engineer | Tata Consultancy Services, Pune, India</h3>
                     <p><strong>Duration:</strong> March 2021 – July 2022</p>
                     <ul>
-                        <li>Acted as a bilingual liaison in a cross-functional team of 20-25 Japanese professionals, optimizing communication and 
-                            collaboration between English and Japanese-speaking members</li>
-                        <li>Monitored and resolved system alerts and errors using ServiceNow for various Japanese enterprise systems including Datadog, 
-                            JP1 and Financial Fax ensuring continuous and reliable IT service management</li>
-                        <li>Executed complex server-side operations, focusing on testing and maintaining Japanese system websites, managing patches, 
-                            validating data, and updating data requests</li>
+                        <li>Provided bilingual technical support for Japanese enterprise clients, resolving infrastructure and application issues through real-time coordination with global development and operations teams</li>
+                        <li>Monitored Japanese enterprise systems like JP1 and Datadog through ServiceNow; performed daily tasks such as patching, backup verification, data validation and log analysis to maintain availability and regulatory compliance</li>
+                        <li>Mentored a Tier-2 support team of 7 engineers and developed internal Standard Operating Procedures (SOPs) and troubleshooting guides, reducing onboarding time and improving operational consistency</li>
+                        <li>Achieved a 35% improvement in resolution time and maintained zero client escalations across all business-critical platforms and production environments</li>
                     </ul>
                 </div>
             </div>
@@ -130,13 +149,11 @@
                 <h2>Leadership Experience</h2>
                 <div class="leadership-item">
                     <h3>Tier-2 Lead | Tata Consultancy Services, Pune, India</h3>
-                    <p><strong>Duration:</strong> September 2021 – July 2022</p>
+                    <p><strong>Duration:</strong> March 2021 – July 2022</p>
                     <ul>
                         <li>Led and supervised the Tier-2 Team for Datadog and JP1 Systems as part of the Japan Operations Project</li>
-                        <li>Trained and mentored new team members in the intricacies of the project workflow, proactively identifying and strengthening 
-                            their skill gaps</li>
-                        <li>Maintained an optimal workflow throughout the project phases, achieving zero escalations and ensuring timely project 
-                            deliveries</li>
+                        <li>Trained and mentored new team members in the intricacies of the project workflow, proactively identifying and strengthening their skill gaps</li>
+                        <li>Maintained an optimal workflow throughout the project phases, achieving zero escalations and ensuring timely project deliveries</li>
                     </ul>
                 </div>
             </div>
@@ -144,10 +161,8 @@
 
         <section id="contact">
             <div class="container">
-                <h2>I'd love to hear from you!</h2>
-                <h3>I'm always excited to explore new opportunities and collaborations. 
-                    If you have a project in mind or just want to say hi, feel free to reach out to me!
-                </h3>
+                <h2>Let's Connect!</h2>
+                <h3>I'm always excited to explore new opportunities and collaborations. If you have a project in mind or just want to say hi, feel free to reach out!</h3>
                 <form>
                     <input type="text" id="name" name="name" placeholder="Your Name">
                     <input type="email" id="email" name="email" placeholder="Your Email">
@@ -164,7 +179,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Narendra Khatpe. All rights reserved.</p>
+        <p>&copy; 2025 Narendra Khatpe. All rights reserved.</p>
     </footer>
 <!-- Link to JavaScript File -->
 <script src="script.js"></script>
